- SNMP port and context can be specified in NXSL function CreateSNMPTransport
- Fixed Summary DCI table fail when row limit set
- Fixed menu path creation for Summary DCI Table and folder creation for graph view
- New command line options for Windows agent installer: /FORCECREATECONFIG, /LOGFILE=, /FILESTORE=, /CONFIGINCLUDEDIR=
- Server optimization for high load
- Fixed issues:
	NX-1377 (Can't upgrade sqlite database from version 21.4 to 21.5 with error "Unable to set not null constraint")
	NX-1435 (AgentTunnelListenPort configuration parameter is missing from config table)
	NX-1458 (DB upgrade from 0.454 to 0.455 failing for sqlite)
	NX-1459 (Online upgrade for 22.21 failed on sqlite)
	NX-1471 (Add option to create node in maintenance mode)
	NX-1472 (Physical Hyper-V Hosts are reporting as Node Type "Virtual" in 2.2.7)
	NX-1480 (Varbinds in SNMP Traps restricted to 255 characters)
	NX-1481 (Configuration option to disable topology based event correlation)
	NX-1482 (NetXMS server ignoring Syslog and Traps from devices in a Zone which are sending directly to NetXMS server)
	NX-1484 (Corrupted event messages if MySQL is used as backend database)


*
* 2.2.7
*

- "Convert to hexadecimal string" option for SNMP table columns
- Improved configuration wizard in Windows server installer
- New command line option /CONFIGENTRY in Windows agent installer
- New dashboard element "Object Details" (based on object queries)
- TCP proxy functionality
- Improved "Alarm Details" view in management console
- Added support for agent actions defined in external subagents
- TCP listener can be disabled in agent configuration file
- Push connector can be disabled in agent configuration file
- Virtual nodes detection via agent
- Basic BIOS and hardware platform information provided by Windows agent
- Fixed issues:
	NX-993 (Windows installer should honor current state of services during upgrade)
	NX-1438 (Increase debug level for thread pool messages)